[tool.poetry]
name = "repl_nix_Discord-RevisionBot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
xds-protos = "^0.0.11"
discord = "^2.1.0"
Flask = "^2.2.2"
google-api-python-client = "^2.66.0"
google-auth-oauthlib = "^0.7.1"
pandas = "^1.5.2"
pytz = "^2022.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
